--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-google-adsense",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A simple ReactJS component for displaying Google AdSense advertisements",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack"
