--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-google-adsense",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A simple ReactJS component for displaying Google AdSense advertisements",
   "main": "build/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com:rjcoupe/react-google-adsense.git"
+    "url": "git+https://github.com/rjcoupe/react-google-adsense.git"
   },
   "keywords": [
     "react",
